[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/title_scene.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="TitleScene" type="Node"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
custom_styles/panel = SubResource( 3 )

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -200.0
margin_right = 400.0
margin_bottom = -51.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]Open Combat 3[/center]"
text = "Open Combat 3"
fit_content_height = true
scroll_active = false

[node name="CpuButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -264.0
margin_right = -256.0
margin_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
text = "VS_CPU"

[node name="ButtonVSOnline" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -264.0
margin_right = 128.0
margin_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
text = "VS_ONLINE"

[node name="BuildButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 320.0
margin_top = -264.0
margin_right = 576.0
margin_bottom = -200.0
grow_horizontal = 2
grow_vertical = 0
text = "DECK_BUILD"

[node name="LanguageOptionButton" type="OptionButton" parent="Panel"]
margin_left = 960.0
margin_right = 1280.0
margin_bottom = 64.0
text = "日本語"
align = 1
items = [ "日本語", null, false, 0, null, "English", null, false, 1, null ]
selected = 0

[connection signal="pressed" from="Panel/CpuButton" to="." method="_on_CpuButton_pressed"]
[connection signal="pressed" from="Panel/ButtonVSOnline" to="." method="_on_ButtonVSOnline_pressed"]
[connection signal="pressed" from="Panel/BuildButton" to="." method="_on_BuildButton_pressed"]
[connection signal="item_selected" from="Panel/LanguageOptionButton" to="." method="_on_LanguageOptionButton_item_selected"]
